<resources>
    <string name="notifications" translatable="false" />
    <string name="dior" translatable="false">Dior</string>
    <string name="cart" translatable="false" />
    <string name="app_name">Ecommerce</string>
    <string name="notification">Notification</string>
    <string name="new_release_lipstick_from_us_united_state_product_good_quantity">New release lipstick from US United State product good quantity</string>
    <string name="date_released_10_12_2024">Date released: 10.12.2024</string>
    <string name="Detail" />
    <string name="ViewDail">Detail</string>
    <string name="hi_pheak">Hi, Pheak!</string>
    <string name="find_products_and_branch">Find products and branch...</string>
    <string name="_15">$15</string>
    <string name="lipstick_satin_finishes_hydrating_floral_lip_care_long_wear">Lipstick - Satin Finishes - Hydrating Floral Lip Care - Long Wear</string>
    <string name="rouge_dior">ROUGE DIOR</string>
</resources>