<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"

            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/notification"
            android:contentDescription="@string/app_name"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="500sp"
        android:src="@drawable/pic1"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/ViewDail" />
</LinearLayout>