<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"

            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/notification"
            android:contentDescription="@string/app_name"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/hover"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textAlignment="viewStart"
                android:text="@string/new_release_lipstick_from_us_united_state_product_good_quantity"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textSize="20sp"
                android:text="@string/date_released_10_12_2024"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textAlignment="viewStart"
                android:text="New release lipstick from US United State product good quantity"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textSize="20sp"
                android:text="Date released: 10.12.2024"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textAlignment="viewStart"
                android:text="New release lipstick from US United State product good quantity"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textSize="20sp"
                android:text="Date released: 10.12.2024"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10sp"
            android:src="@drawable/pic1"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textAlignment="viewStart"
                android:text="New release lipstick from US United State product good quantity"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="2sp"
                android:textSize="20sp"
                android:text="Date released: 10.12.2024"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>